[gd_scene load_steps=9 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/RainIsoDailyNews01.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Scenes/DailyNews.gd" type="Script" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/RainIsoDailyNews03.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/RainIsoDailyNews02.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/Volter__28Goldfish_29.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/RainIsoDailyNews04.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 5 )

[node name="DailyNews" type="CanvasLayer"]
script = ExtResource( 2 )
num = 0

[node name="Container" type="Node2D" parent="."]
visible = false
position = Vector2( 656, 384 )

[node name="DailyNews01" type="Sprite" parent="Container"]
position = Vector2( -16, -22.875 )
scale = Vector2( 2.25238, 2.10859 )
texture = ExtResource( 1 )

[node name="DailyNews02" type="Sprite" parent="Container"]
position = Vector2( -16, -22.875 )
scale = Vector2( 2.25238, 2.10859 )
texture = ExtResource( 4 )

[node name="DailyNews03" type="Sprite" parent="Container"]
position = Vector2( -16, -22.875 )
scale = Vector2( 2.25238, 2.10859 )
texture = ExtResource( 3 )

[node name="DailyNews04" type="Sprite" parent="Container"]
position = Vector2( -16, -22.875 )
scale = Vector2( 2.25238, 2.10859 )
texture = ExtResource( 6 )

[node name="UI" type="Node2D" parent="Container"]

[node name="Left" type="Button" parent="Container/UI"]
margin_left = -320.0
margin_top = -288.0
margin_right = -272.0
margin_bottom = -240.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "<"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/UI/Left"]
margin_left = -16.0
margin_top = -16.0
margin_right = 64.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "Prev"
align = 1
valign = 1

[node name="Texture" type="TextureRect" parent="Container/UI/Left"]
margin_right = 48.0
margin_bottom = 48.0
mouse_filter = 2
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="Container/UI"]
margin_left = 240.0
margin_top = -288.0
margin_right = 288.0
margin_bottom = -240.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = ">"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/UI/Right"]
margin_left = -16.0
margin_top = -16.0
margin_right = 64.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="Container/UI/Right"]
margin_right = 48.0
margin_bottom = 48.0
mouse_filter = 2
expand = true

[connection signal="pressed" from="Container/UI/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Container/UI/Right" to="." method="_on_Right_pressed"]
